--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,10 @@ nav ul ul a {
 
 nav ul ul ul {
      top: 0;
-     left: 100%;
+     left: 100%
 }
 
+nav ul li:hover > ul {
+     display: block
+}
 
